--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <!-- Хиты -->
       <div class="products">
-        <article class="hit-1">
+        <article class="items">
           <div class="hits-logo">
             <img src="img/hits-logo.png" width="" height="">
           </div>
@@ -163,7 +163,7 @@
           <a class="btn-review" href="#">Быстрый просмотр</a>
         </article>
 
-        <article class="hit-2">
+        <article class="items">
           <div class="hits-logo">
             <img src="img/hits-logo.png" width="" height="">
           </div>
@@ -179,7 +179,7 @@
           <a class="btn-review" href="#">Быстрый просмотр</a>
         </article>
 
-        <article class="hit-3">
+        <article class="items">
           <div class="hits-logo">
             <img src="img/hits-logo.png" width="" height="">
           </div>
@@ -195,7 +195,7 @@
           <a class="btn-review" href="#">Быстрый просмотр</a>
         </article>
 
-        <article class="hit-4">
+        <article class="items">
           <div class="hits-logo">
             <img src="img/hits-logo.png" width="" height="">
           </div>
