--- a/catalog.html
+++ b/catalog.html
@@ -14,10 +14,10 @@
 
       <!-- Основная навигация -->
       <nav class="main-navigation">
-        <ul>
+        <ul class="main-navigation-1">
           <li>
             <a href="#">Каталог</a>
-            <ul>
+            <ul class="main-navigation-2">
               <li>
                 <b class="items-new">Новинки</b>
               </li>
@@ -149,7 +149,7 @@
           <span>Сливочное</span>
         </li>
       </ul>
-      <h1>Сливочное мороженое</h1>
+      <h1 class="creamy">Сливочное мороженое</h1>
 
       <!-- Выбор -->
       <form class="selection" action="https://echo.htmlacademy.ru" method="post">
