--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
       <!-- Основная навигация -->
       <nav class="main-navigation">
-        <ul>
+        <ul class="main-navigation-1">
           <li>
             <a href="#">Каталог</a>
-            <ul>
+            <ul class="main-navigation-2">
               <li>
                 <b class="items-new">Новинки</b>
               </li>
@@ -124,7 +124,7 @@
 
       <!-- Баннеры -->
       <div class="banners">
-        <div class="raspberries">
+        <div class="tasty-banners">
           <p class="banner-title">
             Малинка даром!
           </p>
@@ -134,7 +134,7 @@
           </p>
           <a class="banner-btn" href="#">Хочу варенье!</a>
         </div>
-        <div class="chocolates">
+        <div class="tasty-banners">
           <p class="banner-title">
             Шоколадки даром!
           </p>
@@ -253,29 +253,31 @@
         </div>
       </section>
 
-      <!-- Новости -->
-      <div class="news">
-        <p class="news-title">
-          Новое в нашем блоге
-        </p>
-        <a href="#">
-          10 способов сервировки
-          фруктовых щербетов к
-          столу
-        </a>
-      </div>
+      <div class="news-delivery">      
+        <!-- Новости -->
+        <div class="block-1">
+          <p class="news-title">
+            Новое в нашем блоге
+          </p>
+          <a href="#">
+            10 способов сервировки
+            фруктовых щербетов к
+            столу
+          </a>
+        </div>
 
-      <!-- Рассылка -->
-      <div class="delivery">
-        <p>
-          Подпишитесь на нашу сладкую рассылку и будете всегда в курсе
-          всего самого вкусного, что у нас происходит. Обещаем не спамить и
-          не слать всякой не нужной ерунды. Честно =)
-        </p>
-        <form action="https://echo.htmlacademy.ru" method="post">
-          <input type="email" name="delivery" placeholder="Электронная почта">
-          <button class="send-btn" type="submit">Отправить</button>
-        </form>
+        <!-- Рассылка -->
+        <div class="block-1">
+          <p>
+            Подпишитесь на нашу сладкую рассылку и будете всегда в курсе
+            всего самого вкусного, что у нас происходит. Обещаем не спамить и
+            не слать всякой не нужной ерунды. Честно =)
+          </p>
+          <form action="https://echo.htmlacademy.ru" method="post">
+            <input type="email" name="delivery" placeholder="Электронная почта">
+            <button class="send-btn" type="submit">Отправить</button>
+          </form>
+        </div>
       </div>
 
       <!-- Карта -->
