--- a/catalog.html
+++ b/catalog.html
@@ -9,20 +9,20 @@
     <!-- Шапка -->
     <header class="container">
       <a class="index-logo" href="index.html">
-        <img src="img/index-logo.svg" weight="" height="" alt="Gllacy">
+        <img src="img/index-logo.svg" weight="154" height="64" alt="Gllacy">
       </a>
 
       <!-- Основная навигация -->
       <nav class="main-navigation">
         <ul class="main-navigation-1">
-          <li>
+          <li class="catalog">
             <a href="#">Каталог</a>
             <ul class="main-navigation-2">
               <li>
                 <b class="items-new">Новинки</b>
               </li>
               <li>
-                <a href="catalog.html">Сливочное</a>
+                <a class="active" href="catalog.html">Сливочное</a>
               </li>
               <li>
                 <a href="#">Щербеты</a>
