Попытка №2 финальной защиты

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
     <title>GllacyShop</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style-mini.css">
@@ -229,7 +230,7 @@
 
         <!-- SEO -->
         <section class="seo">
-          <p class="slogan">
+          <p class="about">
             Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого
             собственного производства на развес
           </p>
